# Blackjack

./: Blackjack.sln  CMakeLists.txt  README.md  vcpkg.json
Blackjack/: Blackjack.vcxproj  Blackjack.vcxproj.filters  card.cpp  card.h  deck.h  main.cpp  player.cpp  player.h  settings.h
Blackjack/core/: card.h  game_engine.cpp  game_engine.h  hand.cpp  hand.h
Blackjack/views/: ConsoleView.cpp  ConsoleView.h  SfmlView.cpp  SfmlView.h
